# hackathon-toronto

./: Cargo.toml  README.md
contracts/dutch-auction/src/: lib.rs  test.rs
zk-soroban/: README.md
zk-soroban/contracts/dutch-auction/: Cargo.toml
zk-soroban/contracts/dutch-auction/src/: lib.rs
