[package]
name = "hello-world"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
soroban-auth = { workspace = true }
tfhe.workspace = true

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
soroban-auth = { workspace = true, features = ["testutils"] }